# kengine-cpp

./: .clang-format  .gitattributes  .gitignore  .runsettings  CMakeLists.txt  cmds.md  readme.md  renderdoc-basic.cap  vcpkg.json
engine/: CMakeLists.txt
engine/include/public/: ColorFormatAndSpace.cpp  ColorFormatAndSpace.hpp  Engine.hpp  ExecutorService.hpp  QueueFamilies.hpp  Swapchain.hpp  VmaBuffer.hpp  VmaImage.hpp  VmaInclude.hpp  VulkanContext.hpp  VulkanQueue.hpp  Window.hpp
engine/include/public/kengine/: Bounds.hpp  BufferPool.hpp  DebugContext.hpp  DeferredJob.hpp  Engine.hpp  EngineConfig.hpp  EventBus.hpp  ExecutorService.hpp  FrustumIntersection.hpp  Game.hpp  Hashable.hpp  Logger.hpp  Math.hpp  Profiler.hpp  SceneGraph.hpp  Spatial.hpp  SpatialGrid.hpp  SpatialPartitioningManager.hpp  StateMachine.hpp  Transform.hpp  Window.hpp
engine/include/public/kengine/ecs/: BaseSystem.hpp  EcsSystem.hpp  EcsWorld.hpp  World.hpp
engine/include/public/kengine/input/: EventListener.hpp  InputEventAdapter.hpp  InputManager.hpp
engine/include/public/kengine/io/: AssetIO.hpp  AssetSerializer.hpp  MemoryMappedFile.hpp
engine/include/public/kengine/statemachine/: StateMachine.hpp
engine/include/public/kengine/terrain/: OptimizedTerrain.hpp  TerrainContext.hpp  TileSheet.hpp  TileTerrain.cpp  TileTerrain.hpp  TileTerrainChunk.hpp
engine/include/public/renderpass/: DeferredPbrRenderPass.hpp  RenderPass.hpp  RenderTarget.hpp
engine/include/public/statemachine/: StateMachine.hpp
engine/include/public/vulkan/: GpuBuffer.hpp  GpuImage.hpp  QueueFamilies.hpp  Swapchain.hpp  VulkanContext.hpp
engine/src/: Bounds.cpp  ColorFormatAndSpace.cpp  DebugContext.cpp  DeferredJobManager.cpp  EASTL_impl.cpp  Engine.cpp  EventBus.cpp  FrustumIntersection.cpp  GpuBuffer.cpp  QueueFamilies.cpp  SceneGraph.cpp  Spatial.cpp  SpatialGrid.cpp  Swapchain.cpp  Transform.cpp  VmaBuffer.cpp  VulkanContext.cpp  VulkanQueue.cpp  Window.cpp
engine/src/ecs/: EcsWorld.cpp  World.cpp
engine/src/input/: EventListener.cpp  InputEventAdapter.cpp  InputManager.cpp
engine/src/io/: AssetSerializer.cpp  FlieSystemAssetIO.cpp  MemoryMappedFile.cpp
engine/src/renderpass/: DeferredPbrRenderPass.cpp  RenderPass.cpp  RenderTarget.cpp
engine/src/statemachine/: StateMachine.cpp
engine/src/terrain/: DualGridTileTerrain.cpp  OptimizedTerrain.cpp  TerrainContext.cpp  TileTerrainChunk.cpp
engine/src/vulkan/: A.cpp  AsyncAssetCache.cpp  Camera.cpp  CameraController.cpp  ColorFormatAndSpace.cpp  CommandPool.cpp  CullContext.cpp  DrawObjectBuffer.cpp  GpuBuffer.cpp  GpuBufferCache.cpp  ImGuiContext.cpp  ImGuiKEContext.cpp  IndirectDrawBatch.cpp  LightsManager.cpp  MaterialBindManager.cpp  QueueFamilies.cpp  QueueOwnerTransfer.cpp  RenderContext.cpp  SamplerCache.cpp  SceneData.cpp  ShadowCascade.cpp  ShadowContext.cpp  SkeletonManager.cpp  Swapchain.cpp  Vertex.cpp  VulkanContext.cpp  VulkanObject.cpp  VulkanQueue.cpp  tinygltf_impl.cpp
engine/src/vulkan/descriptor/: DescriptorSetAllocator.cpp  DescriptorSetLayout.cpp  DescriptorSetPool.cpp
engine/src/vulkan/material/: AsyncMaterialCache.cpp  Material.cpp  MaterialBinding.cpp  MaterialBindingConfig.cpp  MaterialConfig.cpp  PbrMaterialConfig.cpp  TerrainPbrMaterialConfig.cpp
engine/src/vulkan/mesh/: AsyncModelCache.cpp  GltfModelFactory.cpp  Mesh.cpp  MeshBuilder.cpp  MeshData.cpp  Model.cpp  ModelConfig.cpp  ModelFactory.cpp  ModelMesh.cpp  ModelNode.cpp
engine/src/vulkan/pipelines/: CascadeShadowMapPipeline.cpp  DebugDeferredOffscreenPbrPipeline.cpp  DeferredCompositionPbrPipeline.cpp  DeferredOffscreenPbrPipeline.cpp  DrawCullingPipeline.cpp  Pipeline.cpp  PipelineCache.cpp  PreDrawCullingPipeline.cpp  SkinnedCascadeShadowMapPipeline.cpp  SkinnedOffscreenPbrPipeline.cpp  TerrainDeferredOffscreenPbrPipeline.cpp  TerrainDrawCullingPipeline.cpp  TerrainPreDrawCullingPipeline.cpp
engine/src/vulkan/renderpass/: CascadeShadowMapRenderPass.cpp  DeferredPbrRenderPass.cpp  RenderPass.cpp  RenderTarget.cpp
engine/src/vulkan/texture/: AsyncTextureCache.cpp  Texture2d.cpp  TextureConfig.cpp  TextureFactory.cpp
engine/tests/: CMakeLists.txt  deferred_job.cpp  event_bus.cpp  executor_service.cpp
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt
examples/basic/res/gltf/: smallcube.glb
examples/basic/res/src/: composition.frag  gbuffer.vert  skinned.vert
examples/basic/src/: AnimationSystem.cpp  AnimationSystem.hpp  BasicCameraController.cpp  BasicCameraController.hpp  BasicGameTest.cpp  BasicGameTest.hpp  CameraSystem.cpp  CameraSystem.hpp  Game.hpp  KinematicPlayerSystem.cpp  KinematicPlayerSystem.hpp  Main.cpp  MainGameState.cpp  MainGameState.hpp  MyPlayerContext.cpp  MyPlayerContext.hpp  MyPlayerSystem.hpp  PhysicsContext.cpp  PhysicsContext.hpp  PhysicsSyncSystem.cpp  PhysicsSyncSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PlayerCameraSystem.cpp  PlayerCameraSystem.hpp  PlayerMovementManager.cpp  PlayerMovementManager.hpp  RenderSystem.cpp  RenderSystem.hpp  RenderablePreviousTransformSystem.cpp  RenderablePreviousTransformSystem.hpp  SpatialGridUpdateSystem.cpp  SpatialGridUpdateSystem.hpp
examples/basic/src/components/: Components.cpp  Components.hpp  Material.hpp  Model.hpp  Physics.hpp
examples/basic/src/net/: GameClient.cpp  GameClient.hpp  GameServer.cpp  GameServer.hpp
examples/res/gltf/: char01.glb  smallcube.glb
examples/res/src/: cascade-shadow-skinned.vert  cascade-shadow-skinned.vert.spv  cascade-shadow.frag  cascade-shadow.frag.spv  cascade-shadow.vert  cascade-shadow.vert.spv  composition.frag  composition.frag.spv  debug-geom.vert  gbuffer.frag  gbuffer.frag.spv  gbuffer.vert  gbuffer.vert.spv  object-cull.comp  object-cull.comp.spv  pre-object-cull.comp  skinned.vert.spv  terrain-gbuffer.frag  terrain-gbuffer.vert  terrain-object-cull.comp
examples/src/: AnimationSystem.cpp  BasicCameraController.cpp  BasicGameTest.cpp  CameraSystem.cpp  Components.cpp  Main.cpp  MainGameState.cpp  RenderSystem.cpp  RenderablePreviousTransformSystem.cpp  SpatialGridUpdateSystem.cpp
(+103 files in other folders)
